<resources>
    <string name="app_name">VeritransSdkExample</string>
    <string name="one_click">One click</string>
    <string name="two_click">Two click</string>
    <string name="card_payment_options">Card payment options</string>
    <string name="security_option">3Ds or not</string>
    <string name="secure">Secure</string>
    <string name="unsecure">Insecure</string>
    <string name="normal">Normal</string>
    <string name="delete_saved_cards">Delete saved cards</string>
    <string name="delete_cards">Delete cards</string>
    <string name="select_all_payment_methods">Select all payment methods</string>

    <string name="credit_card">Credit/Debit Card</string>
    <string name="mandiri_clickpay">Mandiri Clickpay</string>
    <string name="cimb_clicks">CIMB Clicks</string>
    <string name="epay_bri">ePay BRI</string>
    <string name="bbm_money">BBM Money</string>
    <string name="indosat_dompetku">Indosat Dompetku</string>
    <string name="mandiri_e_cash">Mandiri e-Cash</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="mandiri_bill_payment">Mandiri Bill Payment</string>
    <string name="indomaret">Indomaret</string>
    <string name="offers">Offers</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
        cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss
        bavarian bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue
        cheese rubber cheese caerphilly cheddar cheesecake cream cheese manchego lancashire.
        Roquefort squirty cheese the big cheese.
    </string>
    <string name="core_flow">Payment Using Core</string>
    <string name="ui_flow">Payment Using Ui</string>
    <string name="using_mandiri">Payment Using Mandiri</string>
    <string name="using_credit">Payment Using Credit</string>
    <string name="using_indosat">Payment Using Indosat</string>
    <string name="using_indomaret">Payment Using Indomaret</string>
    <string name="transaction_pending">Payment pending</string>
    <string name="transaction_deny">Payment deny</string>
    <string name="payment_successful_msg">Payment successful</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="buy">Buy</string>
    <string name="option">Options</string>
    <string name="pay">Pay</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="rp">Rp.</string>

</resources>
