<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/payable_amount"
              android:layout_marginBottom="@dimen/sixteen_dp"
              android:inputType="number"
        />
    <id.co.veritrans.sdk.widgets.TextViewFont android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:text="@string/card_payment_options"
                                              android:textSize="@dimen/primary_text_size"
        />

    <RadioGroup android:id="@+id/click_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
        <RadioButton android:id="@+id/one_click_rd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/one_click"/>
        <RadioButton android:id="@+id/two_click_rd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/two_click"/>
        <RadioButton android:id="@+id/normal_rd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/normal"/>
    </RadioGroup>
    <id.co.veritrans.sdk.widgets.TextViewFont android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:text="@string/security_option"
                                              android:textSize="@dimen/primary_text_size"
        />
    <RadioGroup android:id="@+id/secure_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/sixteen_dp"
        >
        <RadioButton android:id="@+id/seure_rd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/secure"/>
        <RadioButton android:id="@+id/unseure_rd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/unsecure"/>
    </RadioGroup>
    <id.co.veritrans.sdk.widgets.TextViewFont android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:text="@string/delete_saved_cards"
                                              android:textSize="@dimen/primary_text_size"/>
    <Button
        android:id="@+id/btn_delete_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_cards"/>
    <Button
        android:id="@+id/btn_payment"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Payment"/>


</LinearLayout>
