<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:hint="@string/payable_amount"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btn_using_mandiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/using_mandiri"/>

    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_using_indosat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_indosat"/>


    <Button
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_using_indomaret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_indomaret"/>


</LinearLayout>
